<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 分享相关 -->
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="list_friends">%s的朋友</string>
    <string name="share_failed">分享失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">刷新中…</string>
    <string name="share_content">量子财经，教会你理财！</string>

    <!-- 应用主要 -->

    <string name="app_name">量子财经</string>
    <string name="offline_text1">网络不给力呀</string>
    <string name="offline_text2">请检查网络连接</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">查看更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>

    <!-- about -->
    <string name="about_version">版本：1.0</string>
    <string name="about_contactus">财赋</string>
    <string name="about_update">检查更新</string>
    <string name="about_share">分享给好友</string>
    <string name="about_rate">好评我们</string>
    <string name="about_web">官方网站</string>
    <string name="about_company">北京清奕谷网络科技有限公司</string>
    <string name="about_weburl">www.qingyigu.com</string>
    <string name="about_phone">010-12345678</string>
    <string name="about_other">xxxxxxxxxxxx</string>

    <!-- 登录注册 -->
    <string name="login_email">邮箱</string>
    <string name="login_password">密码</string>
    <string name="login_hint_email">请输入您的邮箱地址</string>
    <string name="login_hint_pass">请输入您的密码</string>
    <string name="login_lost_pass">忘记密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_other_login">社交帐号登录</string>
    <string name="login_weibo">新浪微博</string>
    <string name="login_weixin">微信</string>
    <string name="login_qq">腾讯QQ</string>
    <string name="reg_username">昵称</string>
    <string name="reg_hint_username">请输入您的昵称</string>
    <string name="reg_pass">密码</string>
    <string name="reg_hint_pass">请输入您的密码</string>
    <string name="reg_email">邮箱</string>
    <string name="reg_hint_email">请输入您的邮箱地址</string>
    <string name="reg_repass">确认密码</string>
    <string name="reg_hint_repass">请再次输入密码</string>
    <string name="reg_login">登录</string>
    <string name="reg_reg">注册</string>
    <string name="title_activity_evaluate_">Evaluate_Activity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_icollect">ICollectActivity</string>

</resources>