<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/abs__background_holo_light"
    android:fillViewport="true"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/main_title_hight"
            android:background="@drawable/title_bg" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5.0dip"
                android:paddingRight="5.0dip" >

                <ImageView
                    android:layout_width="30.0dip"
                    android:layout_height="30.0dip"
                    android:background="@drawable/title_one_back"
                    android:onClick="finishView" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="关于"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/image_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/about_logo"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginBottom="5.0dip"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3.0dip"
                android:text="@string/about_contactus"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/about_beta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_version"
                android:textColor="#333333"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/about_company"
                    android:textColor="@color/red"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/about_weburl"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/about_phone"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/about_other"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>